# main

./: .env.example  .gitignore  README.md  SOLANA_WALLET_AUTH.md  WALLET_AUTH_SUMMARY.md  ascii.md  commit.sh  package.json  test_backtest_sync.py  test_streaming.py  wrangler.toml
backtest-api/: .env.example  Dockerfile  package-lock.json
backtest-api-deprecated/: README.md  package.json  railway.json
backtest-api/src/: index.ts
backtest_engine/: .dockerignore  API_DOCUMENTATION.md  Dockerfile  README_FLY_DOCKER.md  backtest_engine.py  backtest_engine_v2.py  fly.toml  formating_data.py  mean_reversion_example_strategies.py  requirements.txt  run_backtest.py  synthesis_data_loader.py  test_synthesis_backtest.py  trash_test.py
backtest_engine/api/: __init__.py  main.py
backtest_engine_rs/: Cargo.toml  Dockerfile  fly.toml
backtest_engine_rs/src/: engine.rs  formatting.rs  lib.rs  main.rs  strategies.rs  synthesis_loader.rs
bot/: .env.example  .gitignore  README.md
bot-service/: .dockerignore  .gitignore  Dockerfile  README.md  package.json  tsconfig.json
bot-service/src/: idl.json  index.ts
bot/src/: index.ts  logger.ts  market-resolver.ts  position-monitor.ts  solana-client.ts
contracts/: Anchor.toml  README.md  package.json  test-session.ts  tsconfig.json
contracts/programs/polymarket-paper/: Cargo.toml
contracts/programs/polymarket-paper/src/: lib.rs
contracts/tests/: initialize.ts
database/: README.md
database/migrations/: 0001_complete_schema.sql  0001_initial_schema.sql  0002_add_solana_wallet.sql  0002_add_solana_wallet_fixed.sql  0003_multi_market_backtest.sql
database/schemas/: schema.sql
frontend/: README.md  package.json  svelte.config.js  vite.config.ts  wrangler.toml
frontend-main/: .gitignore  README.md  package-lock.json  package.json
frontend-main/src/: app.html
frontend-main/src/lib/: polymarket.ts
frontend-main/src/routes/: +page.svelte
frontend/src/: app.d.ts  app.html
frontend/src/lib/: polymarket.ts  supabase.ts
frontend/src/routes/: +layout.svelte  +page.svelte
landing/: README.md  next.config.ts  package.json
landing/app/: globals.css  layout.tsx  page.tsx
landing/app/community/: page.tsx
landing/app/profile/: page.tsx
landing/components/: CTA.tsx  CustomProduct.tsx  DetailedFeature.tsx  EverythingSection.tsx  FAQ.tsx  FeatureCards.tsx  Features.tsx  Footer.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  Integration.tsx  PaperTradeSection.tsx  Ticker.tsx
landing/components/community/: CommunityPage.tsx  CommunityWithWallet.tsx  ProfilePageContent.tsx  ProfilePageWrapper.tsx  UsernameModal.tsx  WalletButton.tsx  WalletProvider.tsx
landing/lib/: supabase.ts  web3auth.ts
landing/scripts/: generate-favicons.mjs
(+122 files in other folders)
