[package]
name = "backtest_engine_rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backtest_engine"
path = "src/main.rs"

[[bin]]
name = "synthesis_loader"
path = "src/bin/synthesis_loader.rs"

[[bin]]
name = "format_data"
path = "src/bin/format_data.rs"

[[bin]]
name = "test_synthesis_backtest"
path = "src/bin/test_synthesis_backtest.rs"

[dependencies]
polars = { version = "0.46", features = ["parquet", "lazy", "dtype-datetime", "dtype-struct", "strings", "temporal", "round_series", "is_in", "regex"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
glob = "0.3"
anyhow = "1"
