[package]
name = "backtest_engine_rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backtest_server"
path = "src/bin/backtest_server.rs"

[dependencies]
polars = { version = "0.46", features = ["parquet", "lazy", "dtype-datetime", "dtype-struct", "strings", "temporal", "round_series", "is_in", "regex"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
glob = "0.3"
anyhow = "1"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
tokio-stream = "0.1"
