[package]
name = "polymarket-paper"
version = "0.1.0"
description = "A simplified paper trading program for Polymarket predictions on MagicBlock"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "polymarket_paper"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "=0.32.1"
session-keys = { version = "3.0.10", features = ["no-entrypoint"] }
